--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
-          <img src="{{site.logo | https://i.imgur.com/JJd9UN4.jpg}}" alt="Logo" />
+          <img src="{{site.logo | https://i.imgur.com/JJd9UN4.jpg}}" alt="https://i.imgur.com/JJd9UN4.jpg" />
         {% endif %}       
 
         {% if site.github.is_user_page %}
