--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         {% endif %}       
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My LinkedIn Profile</a></p>
+        <p class="view"><a href="{{ https://www.linkedin.com/in/jonathon-hall-822a70156/ }}">View My LinkedIn Profile</a></p>
         {% endif %}        
         
       </header>
