--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,11 @@
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ https://www.linkedin.com/in/jonathon-hall-822a70156/ }}">View My LinkedIn Profile</a></p>
-        {% endif %}        
+        {% endif %} 
+
+         {% if site.github.is_user_page %}
+        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        {% endif %}
         
       </header>
       <section>
