--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: https://www.linkedin.com/in/jonathon-hall-822a70156/ }}</a></h1>
 
         {% if site.logo %}
           <img src="{{site.logo | https://i.imgur.com/JJd9UN4.jpg}}" alt="https://i.imgur.com/JJd9UN4.jpg" />
