--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         {% endif %}       
 
         
-        <p class="view"><a href="{{ https://www.linkedin.com/in/jonathon-hall-822a70156/ }}">View My LinkedIn Profile</a></p>
+        <p class="view"><a href="{{ "https://www.linkedin.com/in/jonathon-hall-822a70156/" }}">View My LinkedIn Profile</a></p>
         
 
          {% if site.github.is_user_page %}
